<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/ic_no_internet" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/lbl_no_internet"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:fontFamily="@font/poppins_bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/lbl_no_internet_retry_later"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/poppins_regular" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/lbl_retry"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:fontFamily="@font/poppins_bold" />
    </LinearLayout>
</layout>